# TFTModel-use

geospatial-neural-adapter-dev/: .bumpversion.cfg  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
geospatial-neural-adapter-dev/envs/.bin/: utils.sh
geospatial-neural-adapter-dev/envs/conda/: build_conda_env.sh  conda_env_info.sh  find_conda_env.sh  utils.sh
geospatial-neural-adapter-dev/envs/jupyter/: start_jupyter_lab.sh  utils.sh
geospatial-neural-adapter-dev/examples/: TFT_ver_test.ipynb  metrics_summary.csv  metrics_summary_TFT.csv  ols_spatial_adapter_comparison.ipynb  ols_ver_test.ipynb
geospatial-neural-adapter-dev/examples/TFT_runs/TFT_seed_1/best_tau1_1.92e+03_tau2_1.41e+03/: events.out.tfevents.1754987387.LAPTOP-KDG04KJJ.11872.268
geospatial-neural-adapter-dev/examples/TFT_runs/TFT_seed_1/bootstrap/: events.out.tfevents.1754966499.LAPTOP-KDG04KJJ.39975.257  events.out.tfevents.1754967445.LAPTOP-KDG04KJJ.43661.257  events.out.tfevents.1754968274.LAPTOP-KDG04KJJ.48049.257  events.out.tfevents.1754969931.LAPTOP-KDG04KJJ.53433.257  events.out.tfevents.1754971967.LAPTOP-KDG04KJJ.59837.257  events.out.tfevents.1754978828.LAPTOP-KDG04KJJ.79360.257  events.out.tfevents.1754986273.LAPTOP-KDG04KJJ.11872.257
geospatial-neural-adapter-dev/examples/TFT_runs/TFT_seed_1/trial_tau1_1.22e+06_tau2_1.22e+05/: events.out.tfevents.1754986957.LAPTOP-KDG04KJJ.11872.264
geospatial-neural-adapter-dev/examples/TFT_runs/TFT_seed_1/trial_tau1_1.45e+03_tau2_565/: events.out.tfevents.1754986659.LAPTOP-KDG04KJJ.11872.261
geospatial-neural-adapter-dev/examples/TFT_runs/TFT_seed_1/trial_tau1_1.47e+03_tau2_3.74/: events.out.tfevents.1754987064.LAPTOP-KDG04KJJ.11872.265
geospatial-neural-adapter-dev/examples/TFT_runs/TFT_seed_1/trial_tau1_1.92e+03_tau2_1.41e+03/: events.out.tfevents.1754986854.LAPTOP-KDG04KJJ.11872.263
geospatial-neural-adapter-dev/examples/TFT_runs/TFT_seed_1/trial_tau1_15.5_tau2_1.01e+03/: events.out.tfevents.1754986561.LAPTOP-KDG04KJJ.11872.260
geospatial-neural-adapter-dev/examples/TFT_runs/TFT_seed_1/trial_tau1_194_tau2_826/: events.out.tfevents.1754986462.LAPTOP-KDG04KJJ.11872.259
geospatial-neural-adapter-dev/examples/TFT_runs/TFT_seed_1/trial_tau1_3.01e+05_tau2_6.67e+07/: events.out.tfevents.1754987171.LAPTOP-KDG04KJJ.11872.266
geospatial-neural-adapter-dev/examples/TFT_runs/TFT_seed_1/trial_tau1_3.91_tau2_958/: events.out.tfevents.1754986757.LAPTOP-KDG04KJJ.11872.262
geospatial-neural-adapter-dev/examples/TFT_runs/TFT_seed_1/trial_tau1_4.42_tau2_2.56e+07/: events.out.tfevents.1754986365.LAPTOP-KDG04KJJ.11872.258
geospatial-neural-adapter-dev/examples/TFT_runs/TFT_seed_1/trial_tau1_6.06_tau2_0.000805/: events.out.tfevents.1754987281.LAPTOP-KDG04KJJ.11872.267
geospatial-neural-adapter-dev/examples/TFT_runs/TFT_seed_2/best_tau1_398_tau2_59.2/: events.out.tfevents.1754988982.LAPTOP-KDG04KJJ.11872.537
geospatial-neural-adapter-dev/examples/TFT_runs/TFT_seed_2/bootstrap/: events.out.tfevents.1754987894.LAPTOP-KDG04KJJ.11872.526
geospatial-neural-adapter-dev/examples/TFT_runs/TFT_seed_2/trial_tau1_0.000233_tau2_0.121/: events.out.tfevents.1754988778.LAPTOP-KDG04KJJ.11872.535
geospatial-neural-adapter-dev/examples/TFT_runs/TFT_seed_2/trial_tau1_0.000352_tau2_7.05/: events.out.tfevents.1754988579.LAPTOP-KDG04KJJ.11872.533
geospatial-neural-adapter-dev/examples/TFT_runs/TFT_seed_2/trial_tau1_0.00162_tau2_0.0175/: events.out.tfevents.1754987991.LAPTOP-KDG04KJJ.11872.527
geospatial-neural-adapter-dev/examples/TFT_runs/TFT_seed_2/trial_tau1_0.0103_tau2_0.0139/: events.out.tfevents.1754988881.LAPTOP-KDG04KJJ.11872.536
geospatial-neural-adapter-dev/examples/TFT_runs/TFT_seed_2/trial_tau1_0.0709_tau2_0.445/: events.out.tfevents.1754988480.LAPTOP-KDG04KJJ.11872.532
geospatial-neural-adapter-dev/examples/TFT_runs/TFT_seed_2/trial_tau1_0.16_tau2_78.5/: events.out.tfevents.1754988089.LAPTOP-KDG04KJJ.11872.528
geospatial-neural-adapter-dev/examples/TFT_runs/TFT_seed_2/trial_tau1_0.539_tau2_0.064/: events.out.tfevents.1754988678.LAPTOP-KDG04KJJ.11872.534
geospatial-neural-adapter-dev/examples/TFT_runs/TFT_seed_2/trial_tau1_398_tau2_59.2/: events.out.tfevents.1754988284.LAPTOP-KDG04KJJ.11872.530
geospatial-neural-adapter-dev/examples/TFT_runs/TFT_seed_2/trial_tau1_4.57e+06_tau2_0.148/: events.out.tfevents.1754988185.LAPTOP-KDG04KJJ.11872.529
geospatial-neural-adapter-dev/examples/TFT_runs/TFT_seed_2/trial_tau1_6.67e+07_tau2_0.00109/: events.out.tfevents.1754988382.LAPTOP-KDG04KJJ.11872.531
geospatial-neural-adapter-dev/examples/TFT_runs/TFT_seed_3/best_tau1_1.4_tau2_0.517/: events.out.tfevents.1754990577.LAPTOP-KDG04KJJ.11872.806
geospatial-neural-adapter-dev/examples/cpp_extensions/: covariance_estimation.ipynb  thin_plate_spline_demo.ipynb
geospatial-neural-adapter-dev/examples/module_examples/: data_generation_demo.ipynb  spatial_basis_learner_demo.ipynb  spatial_neural_adapter_demo.ipynb  tft_demo.ipynb  tft_spatial_adapter_demo.ipynb  trend_model_demo.ipynb
geospatial-neural-adapter-dev/geospatial_neural_adapter/: __init__.py  logger.py  metrics.py
geospatial-neural-adapter-dev/geospatial_neural_adapter/cpp_extensions/: CMakeLists.txt  CMakeLists.txt.bak  __init__.py  setup.py  spatial_utils.cpp  thin_plate_spline.cpp
geospatial-neural-adapter-dev/geospatial_neural_adapter/data/: __init__.py  generators.py  preprocessing.py
geospatial-neural-adapter-dev/geospatial_neural_adapter/models/: __init__.py  pretrained_trend_model.py  spatial_adapter.py  spatial_basis_learner.py  spatial_neural_adapter.py  trend_model.py
geospatial-neural-adapter-dev/geospatial_neural_adapter/models/wrapper_examples/: tft_wrapper.py
geospatial-neural-adapter-dev/geospatial_neural_adapter/utils/: __init__.py  experiment.py  experiment_helpers.py  model_cache.py  model_factory.py
geospatial-neural-adapter-dev/tests/: conftest.py  test_data_generators.py  test_data_preprocessing.py  test_experiment.py  test_metrics.py  test_models.py  test_spatial_neural_adapter.py
test/: TFTmodel_example_test.ipynb
(+35 files in other folders)
